# MAPF_Pipeline

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  record.doc  record.docx  test.py  test2.py
Space-Time-AStar/: run.py  test.py
Space-Time-AStar/astar/: sapce_time_astar.py  utils.py
Space-Time-AStar/cbs/: searcher.py  smooth.py  utils.py  visulizer.py
app/: cbs_planner.py  smooth_planner.py  test.py  vis_app_utils.py
cpp_pkg/: CMakeLists.txt  main.cpp
include/: Aux_common.h  Aux_continusAstar.h  Aux_dubins.h  astar_algo.h  cbs.h  cbsNode.h  cbs_algo.h  collision_utils.h  common.h  conflict.h  conflict_utils.h  constraintTable.h  constraint_avoid_table.h  grid_utils.h  group_astar_algo.h  instance.h  math_utils.h  pcl_utils.h  pybind_utils.h  spaceTimeAstar.h  state_utils.h  test.h  utils.h
include/version_1/: cbs.h  cbsNode.h  common.h  conflict.h  constraintTable.h  instance.h  spaceTimeAstar.h  utils.h
include/version_2/: Aux_continusAstar.h  Aux_utils.h
include/version_3/: angleAstar.h  cbs.h  common.h  constrainTable.h  instance.h  kdtreeWrapper.h  smoother.h  smoother_random.h  utils.h  vector3d.h
include/version_4/: cbs.h  conflict.h  groupPath.h  kdtreeWrapper.h  smoother.h  smoother_random.h
include/version_5/: angleAstar.h
include/version_5/smooth/: edge_curvature.h  edge_elastic_band.h  edge_kinematics.h  edge_obstacle.h  edge_pipe_conflict.h  groupPath.h  kdtree_xyzra.h  smootherSE3_g2o.h  smootherXYZ_g2o.h  smoother_g2o.h  vertex_XYZ.h  vertex_pose.h
include/version_6/: common.h  conflict.h  constrainTable.h
include/version_6/cbs/: cbs_node.h
include/version_6/pather/: groupPath.h  kdtree_xyzra.h
include/version_6/planner/: AstarSolver.h  groupObjSolver.h  spanningTree_groupSolver.h
include/version_6/smooth/: edge_boundary.h  edge_elastic_band.h  edge_kinematics.h  edge_pipe_conflict.h  smootherSE3_g2o.h  smootherXYZ_g2o.h  vertex_SE3.h
include/version_7/cbs/: cbs_node.h  cbs_solver.h
include/version_7/pather/: groupPath.h
include/version_7/smooth/: edge_boundary.h  edge_elastic_band.h  (+2 more)
include/version_9/: constrainTable.h  instance.h
openfoamBase/: blockMeshDict  createPatchDict  snappyHexMeshDict
reference/: Adjoint Example Inference.docx  Fluid Pipe Auto Design And Opt.emmx  PapersRef.xlsx
reference/topoOpt/: simp_topology_optimization.ipynb
scripts/: astar2D_debug.py  astar3D_debug.py  constrains_table.npy  debug.py  dubinsCurve.py  map.npy  math_infer.ipynb  math_inference.ipynb  obs_idx.npy  test.py  utils.py  vis_utils.py  visulizer.py
scripts/.ipynb_checkpoints/: math_inference-checkpoint.ipynb
scripts/application/: real_condition_1.py  real_condition_2.py
scripts/cbs_hp/: cbs.py
scripts/continueAstar/: constrainTable.py  dubinsCruve.py  hybridAstar.py  instance.py
scripts/debug/: cbs_debug  cbs_debug.py  dubinsCruve_debug.py  hybridAstar_debug.py
scripts/openfoamBase/: snappyHexMeshDict
scripts/version_1/: astar2D_debug.py  astar3D_debug.py  cbs_debug.py  debug.py
scripts/version_2/: dubinsCruve_debug.py
scripts/version_3/: cbs.py  debug.py  debug_angelStar.py  debug_cbs.py  debug_cbsNode.py  debug_kdtree.py  debug_smooth.py  debug_smooth_adv.py  debug_whole_system.py  map.npy
scripts/version_4/: cbs.py  debug_obs_smoother.py  debug_smoother.py  debug_whole_system.py  extract_obs.py  map_creator.py
scripts/version_5/: debug_astar.py  debug_smoother_g2o.py
scripts/version_6/: application.py  cbs_planner.py  convert_cfg.py  debug_cbs_planner.py  debug_env.py  debug_grid_env.py  debug_smoother_2d.py  debug_smoother_3d.py  debug_smoother_3d_simple.py  debug_stl.py  debug_test.py  env_cfg.py  env_creator.py  show_result.py
scripts/version_7/: cbs_plann_application.py  debug_standard.py  env_cfg.py  env_creator.py  hyperGrapher.py  mesh_helper.py  openFoam_helper.py  output_resultSTL.py  pytorch_pathOptimizer.py  show_result.py  smoother_3d_application.py  topolyOpt_planner.py
scripts_py/: utils.py  vis_utils.py  visulizer.py
scripts_py/application/: real_condition_1.py  real_condition_2.py
scripts_py/openfoamBase/: surfaceFeaturesDict  topoSetDict
scripts_py/version_1/: astar2D_debug.py  astar3D_debug.py  cbs_debug.py  debug.py  hybridAstar_debug.py
scripts_py/version_2/: dubinsCruve_debug.py
scripts_py/version_3/: cbs.py  debug.py  debug_cbs.py  debug_cbsNode.py  debug_kdtree.py  debug_smooth.py  debug_smooth_adv.py  debug_whole_system.py
scripts_py/version_4/: cbs.py  debug_groupPath.py  debug_obs_smoother.py  debug_whole_system.py  extract_obs.py  map_creator.py
scripts_py/version_5/: debug_astar.py  debug_group_path.py  debug_smootherSE3_g2o.py  debug_smootherXYZ.py  test.py
scripts_py/version_6/: debug_cbs_planner.py  debug_smoother_3d.py  debug_smoother_3d_simple.py  debug_stl.py  debug_test.py  env_creator.py  o3d_helper.py  show_result.py
scripts_py/version_7/: cbs_plann_application.py  cbs_planner.py  debug_smoother_2d.py  debug_standard.py  openFoam_helper.py  output_resultSTL.py  pytorch_pathOptimizer.py  show_result.py  smoother_3d_application.py  topolyOpt_planner.py
src/: Aux_driver.cpp  Aux_utils.cpp  astar_algo.cpp  cbs.cpp  cbsNode.cpp  cbs_algo.cpp  collision_utils.cpp  constraintTable.cpp  driver.cpp  grid_utils.cpp  group_astar_algo.cpp  insstance.cpp  instance.cpp  main.cpp  math_utils.cpp  pcl_utils.cpp  spaceTimeAstar.cpp  state_utils.cpp
src/version_1/: cbs.cpp  cbsNode.cpp  constraintTable.cpp  driver.cpp  instance.cpp  spaceTimeAstar.cpp
src/version_2/: Aux_continusAstar.cpp  Aux_dubins.cpp
src/version_3/: angleAstar.cpp  cbs.cpp  constrainTable.cpp  driver.cpp  instance.cpp  kdtreeWrapper.cpp  smoother.cpp  smoother_random.cpp  utils.cpp
src/version_4/: angleAstar.cpp  cbs.cpp  driver.cpp  groupPath.cpp  smoother.cpp  smoother_random.cpp
src/version_5/: constrainTable.cpp  driver.cpp  kdtree.c
src/version_6/: cbs.cpp  constrainTable.cpp  driver.cpp  driver_tmp.cpp  utils.cpp
src/version_7/: driver.cpp  instance.cpp
src/version_8/: constrainTable.cpp  driver.cpp  instance.cpp
src/version_9/: driver.cpp  utils.cpp
(+317 files in other folders)
